<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SegundoActivity" >

    <TextView
        android:id="@+id/idNombreSegunda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView"
        tools:text="@string/edit_text_nombre_segunda" />

    <EditText
        android:id="@+id/idNombreRegresarSegunda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/edit_text_nombre_regresar" />

    <Button
        android:id="@+id/idButtonRegresarSegunda"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="RegresarAmain"
        android:text="@string/button_regresar_segunda" />
</LinearLayout>